a2/grade.txt
Grade: 0.00/50.00

1 Deduction(s):

--------------
#1: 50.00 points
Failing test: cannot import a2/a2.py
  File "students/RavaliNannuru/a2/a2.py", line 581

    break

        ^

SyntaxError: 'break' outside loop
--------------

